# AcceleratingFFTConvolutions

./: .gitignore  LICENSE  README.md
cuda/: CMakeLists.txt  Doxyfile  FFT_Algorithms.cu  README.md  cuda_convolution.cu  main.cpp
cuda/libs/: CMakeLists.txt
cuda/libs/include/: opencv.hpp
cuda/libs/includes/: opencv.hpp
cuda/operations/: CMakeLists.txt
cuda/operations/include/: GPU_SFFT.cuh  cuda_operations.cuh  utils.cuh
cuda/operations/src/: GPU_SFFT.cu  cuda_operations.cu  utils.cu
cuda/tests/: CMakeLists.txt
cuda/tests/include/: convolution_test.cuh  gpusfft_test.cuh
cuda/tests/src/: convolution_test.cu  cuda_hello.cu
torch/: CMakeLists.txt  README.txt  dataprep.cpp  dataprep.hpp  main.cpp
torch/customops/: CMakeLists.txt
torch/customops/kernels/: all_reduce.cuh
torch/customops/kernels/include/: all_reduce.cuh  convolution.cuh  customAutograd.cuh
torch/customops/kernels/src/: all_reduce.cu  convolution.cu
torch/customops/operators/: extension.cpp
torch/customops/operators/src/: extension.cpp
torch/models/: CMakeLists.txt
torch/models/include/: AlexNet.hpp  LeNet5.hpp  resnet.hpp
torch/models/src/: AlexNet.cpp  resnet.cpp
torch/utils/: CMakeLists.txt
torch/utils/include/: dataprep.hpp  inference.hpp  train.hpp
torch/utils/src/: dataprep.cpp  inference.cpp  train.cpp
